# WeBridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CODE_OF_CONDUCT.md  contributing.md  installation.md  usage.md
examples/: cpp_example.cpp  js_example.js  python_example.py
src/common/: constants.h  constants.js  constants.py
src/cpp/include/: bridge.hpp
src/cpp/src/: bridge.cpp  type_converter.cpp
src/js/: bridge.js
src/python/: bridge.py
tests/: CMakeLists.txt  aa.py  test.cpp
